Added Error Message Validation to ignore bad Messages.
- Add Pretty Printing for Types
- Added a few test scenarios

--- a/plugins/hls-change-type-signature-plugin/test/testdata/hie.yaml
+++ b/plugins/hls-change-type-signature-plugin/test/testdata/hie.yaml
@@ -3,5 +3,7 @@ cradle:
     arguments:
       - -i
       - -i.
-      - TExpectedActualFullSignature
+      - TExpectedActual
+      - TRigidType
+      - TErrorGivenPartialSignature
       - -Wall
