Multi component issues in GHC 9.2 (#2687)
* Delete useAnnotatedParsedSource (not used anywhere)

* Multi component test suite: test packages

* Multi component test suite: replace delays with waits

* Multi component: test with 3 components

* Helpers for reference/ready message parsing

* Multi component test: wait for reference ready

* mark test as known broken in 9.2

--- a/ghcide/test/data/multi/c/c.cabal
+++ b/ghcide/test/data/multi/c/c.cabal
@@ -1,9 +1,9 @@
-name: a
+name: c
 version: 1.0.0
 build-type: Simple
 cabal-version: >= 1.2
 
 library
-  build-depends: base, async
-  exposed-modules: A
+  build-depends: base, a
+  exposed-modules: C
   hs-source-dirs: .
