--- a/stack-9.2.1.yaml
+++ b/stack-9.2.1.yaml
@@ -28,8 +28,9 @@ packages:
 - ./plugins/hls-pragmas-plugin
 - ./plugins/hls-module-name-plugin
 - ./plugins/hls-ormolu-plugin
-# - ./plugins/hls-alternate-number-format-plugin
+- ./plugins/hls-alternate-number-format-plugin
 - ./plugins/hls-selection-range-plugin
+- ./plugins/hls-change-type-signature-range-plugin
 
 extra-deps:
 - aeson-2.0.3.0
