--- a/plugins/hls-class-plugin/hls-class-plugin.cabal
+++ b/plugins/hls-class-plugin/hls-class-plugin.cabal
@@ -56,3 +56,5 @@ test-suite tests
     , hls-test-utils     ^>=1.2
     , lens
     , lsp-types
+    -- Remove the below line when compiled succeed on 9.2.
+    , ghc
