--- a/plugins/hls-change-type-signature-plugin/test/testdata/hie.yaml
+++ b/plugins/hls-change-type-signature-plugin/test/testdata/hie.yaml
@@ -6,4 +6,7 @@ cradle:
       - TExpectedActual
       - TRigidType
       - TErrorGivenPartialSignature
+      - TLocalBinding
+      - TLocalBindingShadow1
+      - TLocalBindingShadow2
       - -Wall
