--- a/plugins/hls-change-type-signature-plugin/hls-change-type-signature-plugin.cabal
+++ b/plugins/hls-change-type-signature-plugin/hls-change-type-signature-plugin.cabal
@@ -31,6 +31,7 @@ library
     , transformers
     , unordered-containers
 
+  ghc-options: -Wall
   default-language: Haskell2010
   default-extensions:
     ConstraintKinds
@@ -48,7 +49,7 @@ test-suite tests
   default-language: Haskell2010
   hs-source-dirs:   test
   main-is:          Main.hs
-  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
+  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts -Wall
   build-depends:
     , base                 >=4.12 && < 5
     , filepath
