--- a/cabal.project
+++ b/cabal.project
@@ -50,3 +50,8 @@ allow-newer:
     -- for shake-bench
     Chart-diagrams:diagrams-core,
     SVGFonts:diagrams-core
+
+source-repository-package
+    type: git
+    location: https://github.com/haskell/hie-bios.git
+    tag: 2e4161151980f65676de3eae2a71ec2bbb5006be
