--- a/stack-8.6.5.yaml
+++ b/stack-8.6.5.yaml
@@ -62,8 +62,7 @@ extra-deps:
   - haddock-library-1.10.0
   - hashable-1.3.0.0
   - heapsize-0.3.0
-  - github: haskell/hie-bios
-    commit: 2e4161151980f65676de3eae2a71ec2bbb5006be
+  - hie-bios-0.9.0
   - hlint-3.2.8
   - HsYAML-0.2.1.0@rev:1
   - HsYAML-aeson-0.2.0.0@rev:2
