--- a/stack-9.0.2.yaml
+++ b/stack-9.0.2.yaml
@@ -45,8 +45,7 @@ extra-deps:
 - floskell-0.10.6
 - heapsize-0.3.0.1
 - hiedb-0.4.1.0
-- github: haskell/hie-bios
-  commit: 2e4161151980f65676de3eae2a71ec2bbb5006be
+- hie-bios-0.9.0
 - implicit-hie-0.1.2.6
 - implicit-hie-cradle-0.3.0.5
 - monad-dijkstra-0.1.1.3
