--- a/ghcide/.hlint.yaml
+++ b/ghcide/.hlint.yaml
@@ -89,6 +89,7 @@
     within:
     - Development.IDE.Compat
     - Development.IDE.Core.FileStore
+    - Development.IDE.Core.FileUtils
     - Development.IDE.Core.Compile
     - Development.IDE.Core.Rules
     - Development.IDE.Core.Tracing
