--- a/ghcide/.hlint.yaml
+++ b/ghcide/.hlint.yaml
@@ -89,6 +89,7 @@
     within:
     - Development.IDE.Compat
     - Development.IDE.Core.FileStore
+    - Development.IDE.Core.FileUtils
     - Development.IDE.Core.Compile
     - Development.IDE.Core.Rules
     - Development.IDE.Core.Tracing
@@ -104,6 +105,7 @@
     - Development.IDE.GHC.Compat.Units
     - Development.IDE.GHC.Compat.Util
     - Development.IDE.GHC.CPP
+    - Development.IDE.GHC.Dump
     - Development.IDE.GHC.ExactPrint
     - Development.IDE.GHC.Orphans
     - Development.IDE.GHC.Util
