Upgrade to hie-bios 0.9.0 (#2738)
* Try out new hie-bios

* Update to hie-bios 0.9.0 hackage release

* Use caret operator for hie-bios dependency

Co-authored-by: Julian Ospald <hasufell@posteo.de>

* Update nix dependency

* Update hie-bios dependency in flake.nix

Co-authored-by: Potato Hatsue <berberman@yandex.com>

Co-authored-by: Julian Ospald <hasufell@posteo.de>
Co-authored-by: Potato Hatsue <berberman@yandex.com>
Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/stack-9.2.1.yaml
+++ b/stack-9.2.1.yaml
@@ -50,6 +50,7 @@ extra-deps:
 - ghc-lib-parser-ex-9.2.0.1
 - heapsize-0.3.0.1
 - hiedb-0.4.1.0
+- hie-bios-0.9.0
 - hspec-2.7.10       # for hls-test-utils
 - hspec-core-2.7.10  # for hls-test-utils
 - implicit-hie-0.1.2.6
