--- a/stack-9.0.2.yaml
+++ b/stack-9.0.2.yaml
@@ -45,6 +45,7 @@ extra-deps:
 - floskell-0.10.6
 - heapsize-0.3.0.1
 - hiedb-0.4.1.0
+- hie-bios-0.9.0
 - implicit-hie-0.1.2.6
 - implicit-hie-cradle-0.3.0.5
 - monad-dijkstra-0.1.1.3
