--- a/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
+++ b/plugins/hls-fourmolu-plugin/hls-fourmolu-plugin.cabal
@@ -30,7 +30,7 @@ library
     , hls-plugin-api  ^>=1.3
     , lens
     , lsp
-    , process
+    , process-extras
     , text
 
   default-language: Haskell2010
