--- a/hls-graph/hls-graph.cabal
+++ b/hls-graph/hls-graph.cabal
@@ -111,9 +111,10 @@ test-suite tests
   hs-source-dirs:   test
   main-is:          Main.hs
   other-modules:
-    DatabaseSpec
-    RulesSpec
     ActionSpec
+    DatabaseSpec
+    Example
+    RulesSpec
     Spec
 
   ghc-options:      -threaded -rtsopts -with-rtsopts=-N -fno-ignore-asserts
@@ -125,6 +126,8 @@ test-suite tests
     , filepath
     , hls-graph
     , hspec
+    , stm
+    , stm-containers
     , tasty
     , tasty-hspec
     , tasty-hunit
