--- a/cabal.project
+++ b/cabal.project
@@ -50,4 +50,4 @@ constraints:
 allow-newer:
   stylish-haskell:Cabal,
   stylish-haskell:ghc-lib-parser,
-  stylish-haskell:aeson,
+  stylish-haskell:aeson
