Update Test Suite

--- a/plugins/hls-alternate-number-format-plugin/test/testdata/hie.yaml
+++ b/plugins/hls-alternate-number-format-plugin/test/testdata/hie.yaml
@@ -9,6 +9,7 @@ cradle:
       - TIntDtoND
       - TFracDtoE
       - TFracDtoHF
+      - TFracDtoHFWithPragma
       - TIntHtoD
       - TFracHFtoD
       - TFindLiteralIntPattern
