--- a/.github/workflows/caching.yml
+++ b/.github/workflows/caching.yml
@@ -116,6 +116,9 @@ jobs:
         run: |
           # repeating builds to workaround segfaults in windows and ghc-8.8.4
           cabal $cabalBuild || cabal $cabalBuild || cabal $cabalBuild
+        env:
+          # needed for GHC 9.2.2 https://github.com/digital-asset/ghc-lib/issues/352
+          CPATH:"/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/ffi":$CPATH
 
       # We build ghcide with benchs and test enabled to include its dependencies in the cache
       # (including shake-bench)
