--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -419,8 +419,10 @@ build-x86_64-darwin:
     ADD_CABAL_ARGS: ""
   before_script:
     - /bin/bash ./.gitlab/brew.sh autoconf automake coreutils make tree
+  # CPATH https://github.com/digital-asset/ghc-lib/issues/352
   script: |
     export PATH="$CI_PROJECT_DIR/.brew/bin:$CI_PROJECT_DIR/.brew/sbin:$PATH"
+    export CPATH="/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/ffi:$CPATH"
     /bin/bash ./.gitlab/ci.sh
   after_script:
     - rm -Rf /private/tmp/.brew_tmp
@@ -469,6 +471,7 @@ build-aarch64-darwin:
     - export HOMEBREW_CHANGE_ARCH_TO_ARM=1
     - arch -arm64 /bin/bash ./.gitlab/brew.sh llvm autoconf automake coreutils make tree
   # C_INCLUDE_PATH: https://gitlab.haskell.org/ghc/ghc/-/issues/20592
+  # CPATH https://github.com/digital-asset/ghc-lib/issues/352
   script: |
     export PATH="$CI_PROJECT_DIR/.brew/opt/llvm/bin:$CI_PROJECT_DIR/.brew/bin:$CI_PROJECT_DIR/.brew/sbin:$PATH"
     export CC=$CI_PROJECT_DIR/.brew/opt/llvm/bin/clang
@@ -477,6 +480,7 @@ build-aarch64-darwin:
     export AR=$CI_PROJECT_DIR/.brew/opt/llvm/bin/llvm-ar
     export RANLIB=$CI_PROJECT_DIR/.brew/opt/llvm/bin/llvm-ranlib
     export C_INCLUDE_PATH="`xcrun --show-sdk-path`/usr/include/ffi"
+    export CPATH="/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/ffi:$CPATH"
     arch -arm64 /bin/bash ./.gitlab/ci.sh
   after_script:
     - rm -Rf /private/tmp/.brew_tmp
@@ -505,9 +509,11 @@ test-aarch64-darwin:
     - export HOMEBREW_CHANGE_ARCH_TO_ARM=1
     - arch -arm64 /bin/bash ./.gitlab/brew.sh make tree
   # C_INCLUDE_PATH: https://gitlab.haskell.org/ghc/ghc/-/issues/20592
+  # CPATH https://github.com/digital-asset/ghc-lib/issues/352
   script: |
     export PATH="$CI_PROJECT_DIR/.brew/opt/llvm/bin:$CI_PROJECT_DIR/.brew/bin:$CI_PROJECT_DIR/.brew/sbin:$PATH"
     export C_INCLUDE_PATH="`xcrun --show-sdk-path`/usr/include/ffi"
+    export CPATH="/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/ffi:$CPATH"
     arch -arm64 /bin/bash ./.gitlab/test.sh
   after_script:
     - rm -Rf /private/tmp/.brew_tmp
