--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,6 +107,8 @@ jobs:
 
   ghc-9.2.2:
     environment:
+      # https://github.com/digital-asset/ghc-lib/issues/352
+      - CPATH: "/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/ffi:$CPATH"
       - STACK_FILE: "stack-9.2.yaml"
     <<: *defaults
 
