--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -115,10 +115,10 @@ jobs:
 
       # repeating builds to workaround segfaults in windows and ghc-8.8.4
       - name: Build
-        run: cabal build || cabal build || cabal build
         # needed for GHC 9.2.2 https://github.com/digital-asset/ghc-lib/issues/352
         env:
-          CPATH: "/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/ffi":$CPATH
+          CPATH: "/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/ffi:$CPATH"
+        run: cabal build || cabal build || cabal build
 
       - name: Set test options
         # run the tests without parallelism, otherwise tasty will attempt to run
