--- a/.github/workflows/caching.yml
+++ b/.github/workflows/caching.yml
@@ -80,7 +80,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ghc: [ "9.2.1"
+        ghc: [ "9.2.2"
              , "9.0.2"
              , "9.0.1"
              , "8.10.7"
@@ -116,6 +116,9 @@ jobs:
         run: |
           # repeating builds to workaround segfaults in windows and ghc-8.8.4
           cabal $cabalBuild || cabal $cabalBuild || cabal $cabalBuild
+        env:
+          # needed for GHC 9.2.2 https://github.com/digital-asset/ghc-lib/issues/352
+          CPATH:"/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/ffi":$CPATH
 
       # We build ghcide with benchs and test enabled to include its dependencies in the cache
       # (including shake-bench)
