--- a/plugins/hls-rename-plugin/hls-rename-plugin.cabal
+++ b/plugins/hls-rename-plugin/hls-rename-plugin.cabal
@@ -1,6 +1,6 @@
 cabal-version:      2.4
 name:               hls-rename-plugin
-version:            1.0.0.1
+version:            1.0.0.2
 synopsis:           Rename plugin for Haskell Language Server
 description:
   Please see the README on GitHub at <https://github.com/haskell/haskell-language-server#readme>
@@ -26,13 +26,16 @@ library
     , ghc
     , ghc-exactprint
     , ghcide                ^>=1.6
+    , hashable
     , hiedb
     , hls-plugin-api        ^>=1.3
     , lsp
     , lsp-types
+    , mod
     , syb
     , text
     , transformers
+    , unordered-containers
 
   default-language: Haskell2010
 
