--- a/shake-bench/shake-bench.cabal
+++ b/shake-bench/shake-bench.cabal
@@ -29,6 +29,7 @@ library
         filepath,
         lens,
         lens-aeson,
+        mtl,
         shake,
         text
   default-language: Haskell2010
