--- a/cabal-ghc92.project
+++ b/cabal-ghc92.project
@@ -47,11 +47,10 @@ constraints:
     +ignore-plugins-ghc-bounds
     -brittany
     -haddockComments
-    -hlint
     -retrie
     -splice
-    -stylishhaskell
     -tactic,
+  hls-hlint-plugin +hlint33 +ghc-lib
 
 allow-newer:
   -- for shake-bench
@@ -73,11 +72,6 @@ allow-newer:
   data-tree-print:base,
   -- https://github.com/lspitzner/butcher/pull/8
   butcher:base,
-
-  stylish-haskell:ghc-lib-parser,
-  stylish-haskell:Cabal,
-  stylish-haskell:bytestring,
-  stylish-haskell:aeson,
 
   ormolu:ghc-lib-parser,
 
@@ -105,3 +99,13 @@ allow-newer:
 
 allow-older:
   primitive-extras:primitive-unlifted
+
+source-repository-package
+  type: git
+  location: https://github.com/ndmitchell/hlint.git
+  tag: d155bac951622afdc868cbeec19643ca443c52fa
+
+source-repository-package
+  type: git
+  location: https://github.com/July541/stylish-haskell.git
+  tag: 012e1209b8c40d80a8cd62e568d105561834f600
