--- a/plugins/hls-hlint-plugin/hls-hlint-plugin.cabal
+++ b/plugins/hls-hlint-plugin/hls-hlint-plugin.cabal
@@ -84,8 +84,9 @@ library
     else
       build-depends:
         , ghc
-        , ghc-lib            ^>=9.0
-        , ghc-lib-parser-ex  ^>=9.0
+        , ghc-lib            ^>=9.2
+        , ghc-lib-parser-ex  ^>=9.2
+        , ghc-lib-parser ^>=9.2
 
       cpp-options:   -DHLINT_ON_GHC_LIB
 
