--- a/plugins/hls-stylish-haskell-plugin/hls-stylish-haskell-plugin.cabal
+++ b/plugins/hls-stylish-haskell-plugin/hls-stylish-haskell-plugin.cabal
@@ -27,7 +27,7 @@ library
     , ghcide           ^>=1.6
     , hls-plugin-api   ^>=1.3
     , lsp-types
-    , stylish-haskell  ^>=0.12 || ^>=0.13
+    , stylish-haskell  ^>=0.12 || ^>=0.13 || ^>=0.14
     , text
 
   default-language: Haskell2010
