--- a/stack-9.0.2.yaml
+++ b/stack-9.0.2.yaml
@@ -21,7 +21,7 @@ packages:
 - ./plugins/hls-splice-plugin
 - ./plugins/hls-tactics-plugin
 - ./plugins/hls-brittany-plugin
-# - ./plugins/hls-stylish-haskell-plugin
+- ./plugins/hls-stylish-haskell-plugin
 - ./plugins/hls-floskell-plugin
 - ./plugins/hls-fourmolu-plugin
 - ./plugins/hls-pragmas-plugin
@@ -80,12 +80,23 @@ extra-deps:
 - ghc-typelits-natnormalise-0.7.6
 
 # boot libraries
-- Cabal-3.4.1.0
+- Cabal-3.6.0.0
 - directory-1.3.6.2
 - process-1.6.13.2
 - time-1.9.3
 - unix-2.7.2.2
 - Win32-2.12.0.1
+
+- github: ndmitchell/hlint
+  commit: d155bac951622afdc868cbeec19643ca443c52fa
+
+- apply-refact-0.9.3.0
+- stylish-haskell-0.14.0.1
+- ghc-lib-9.2.2.20220307
+- ghc-lib-parser-9.2.2.20220307
+- ghc-lib-parser-ex-9.2.0.3
+- fourmolu-0.5.0.0
+- ormolu-0.4.0.0
 
 # currently needed for ghcide>extra, etc.
 allow-newer: true
@@ -106,13 +117,13 @@ flags:
     pedantic: true
 
     ignore-plugins-ghc-bounds: true
-    stylishHaskell: false
 
   retrie:
     BuildExecutable: false
   # Stack doesn't support automatic flags.
   hls-hlint-plugin:
     hlint33: true
+    ghc-lib: true
   hyphenation:
     embed: true
 
