--- a/stack-9.2.yaml
+++ b/stack-9.2.yaml
@@ -16,13 +16,13 @@ packages:
 - ./plugins/hls-explicit-imports-plugin
 - ./plugins/hls-qualify-imported-names-plugin
 - ./plugins/hls-refine-imports-plugin
-# - ./plugins/hls-hlint-plugin
+- ./plugins/hls-hlint-plugin
 - ./plugins/hls-rename-plugin
 # - ./plugins/hls-retrie-plugin
 # - ./plugins/hls-splice-plugin
 # - ./plugins/hls-tactics-plugin
 # - ./plugins/hls-brittany-plugin
-# - ./plugins/hls-stylish-haskell-plugin
+- ./plugins/hls-stylish-haskell-plugin
 - ./plugins/hls-floskell-plugin
 - ./plugins/hls-fourmolu-plugin
 - ./plugins/hls-pragmas-plugin
@@ -45,10 +45,10 @@ extra-deps:
 - extra-1.7.10
 - floskell-0.10.6
 - fourmolu-0.5.0.0
-- ghc-exactprint-1.4.1
+- ghc-exactprint-1.5.0
 - ghc-lib-9.2.2.20220307
 - ghc-lib-parser-9.2.2.20220307
-- ghc-lib-parser-ex-9.2.0.1
+- ghc-lib-parser-ex-9.2.0.3
 - heapsize-0.3.0.1
 - hiedb-0.4.1.0
 - hie-bios-0.9.1
@@ -94,6 +94,12 @@ extra-deps:
 - unix-2.7.2.2
 - Win32-2.12.0.1
 
+- github: ndmitchell/hlint
+  commit: d155bac951622afdc868cbeec19643ca443c52fa
+- github: July541/stylish-haskell
+  commit: 012e1209b8c40d80a8cd62e568d105561834f600
+- apply-refact-0.10.0.0
+
 # currently needed for ghcide>extra, etc.
 allow-newer: true
 
@@ -117,17 +123,23 @@ flags:
     brittany: false
     eval: false
     haddockComments: false
-    hlint: false
     retrie: false
     splice: false
-    stylishhaskell: false
     tactic: false
 
   retrie:
     BuildExecutable: false
   # Stack doesn't support automatic flags.
-  # hls-hlint-plugin:
-  #   hlint33: true
+  hls-hlint-plugin:
+    ghc-lib: true
+    hlint33: true
+  hlint:
+    ghc-lib: true
+  ghc-lib-parser-ex:
+    auto: false
+    no-ghc-lib: false
+  stylish-haskell:
+    no-ghc-lib: false
   hyphenation:
     embed: true
 
