Add constraints on ghc9.0

--- a/cabal-ghc90.project
+++ b/cabal-ghc90.project
@@ -43,7 +43,11 @@ constraints:
   -- These plugins don't work on GHC9 yet
   -- Add a plugin needs remove the -flag but also update ghc bounds in hls.cabal
   haskell-language-server +ignore-plugins-ghc-bounds,
-  ghc-lib-parser ^>= 9.2
+  ghc-lib-parser ^>= 9.2,
+  hls-hlint-plugin +hlint33 +ghc-lib,
+  hlint +ghc-lib,
+  ghc-lib-parser-ex -auto -no-ghc-lib,
+  stylish-haskell -no-ghc-lib
 
 -- although we are not building all plugins cabal solver phase is run for all packages
 -- this way we track explicitly all transitive dependencies which need support for ghc-9
