All newer ghc-exactprint

--- a/cabal-ghc92.project
+++ b/cabal-ghc92.project
@@ -103,7 +103,9 @@ allow-newer:
   -- for ghcide:test via ghc-typelits-knownnat
   ghc-typelits-natnormalise:ghc-bignum,
 
-  hiedb:base
+  hiedb:base,
+
+  ghc-exactprint
 
 allow-older:
   primitive-extras:primitive-unlifted
