--- a/cabal-ghc92.project
+++ b/cabal-ghc92.project
@@ -112,8 +112,8 @@ allow-older:
 
 source-repository-package
   type: git
-  location: https://github.com/ndmitchell/hlint.git
-  tag: d155bac951622afdc868cbeec19643ca443c52fa
+  location: https://github.com/July541/hlint.git
+  tag: cb1441651dc225c58827747c5cfd8a3c6e123371
 
 source-repository-package
   type: git
