--- a/plugins/hls-hlint-plugin/hls-hlint-plugin.cabal
+++ b/plugins/hls-hlint-plugin/hls-hlint-plugin.cabal
@@ -57,7 +57,6 @@ library
     , ghc-exactprint        >=0.6.3.4
     , ghcide                ^>=1.6
     , hashable
-    , hlint
     , hls-plugin-api        ^>=1.3
     , hslogger
     , lens
@@ -78,7 +77,7 @@ library
     -- This mirrors the logic in hlint.cabal for hlint-3.3
     -- https://github.com/ndmitchell/hlint/blob/d3576de4529d8df6cca5a345f5b7e04474ff7bff/hlint.cabal#L79-L88
     -- so we can make sure that we do the same thing as hlint
-    build-depends: hlint ^>=3.3
+    build-depends: hlint ==3.3.7
     if (!flag(ghc-lib) && impl(ghc >=9.0.1) && impl(ghc <9.1.0))
       build-depends: ghc ==9.0.*
     else
