--- a/stack-9.0.2.yaml
+++ b/stack-9.0.2.yaml
@@ -87,8 +87,8 @@ extra-deps:
 - unix-2.7.2.2
 - Win32-2.12.0.1
 
-- github: ndmitchell/hlint
-  commit: d155bac951622afdc868cbeec19643ca443c52fa
+- github: July541/hlint
+  commit: d933b5bda075d3c2d3131429ed91ed735c3cc1c2
 
 - apply-refact-0.9.3.0
 - stylish-haskell-0.14.0.1
