--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,8 @@ variables:
       CABAL_PROJECT: cabal.project
     - GHC_VERSION: 9.0.2
       CABAL_PROJECT: cabal-ghc90.project
+    - GHC_VERSION: 9.2.1
+      CABAL_PROJECT: cabal-ghc92.project
     - GHC_VERSION: 9.2.2
       CABAL_PROJECT: cabal-ghc92.project
 
