--- a/stack-9.0.2.yaml
+++ b/stack-9.0.2.yaml
@@ -21,7 +21,7 @@ packages:
 - ./plugins/hls-splice-plugin
 - ./plugins/hls-tactics-plugin
 - ./plugins/hls-brittany-plugin
-# - ./plugins/hls-stylish-haskell-plugin
+- ./plugins/hls-stylish-haskell-plugin
 - ./plugins/hls-floskell-plugin
 - ./plugins/hls-fourmolu-plugin
 - ./plugins/hls-pragmas-plugin
@@ -57,6 +57,13 @@ extra-deps:
 - lsp-types-1.4.0.1
 - lsp-test-0.14.0.2
 - unix-compat-0.5.4
+- ghc-lib-9.2.2.20220307
+- ghc-lib-parser-9.2.2.20220307
+- ghc-lib-parser-ex-9.2.0.3
+- hlint-3.4
+- stylish-haskell-0.14.1.0
+- ormolu-0.4.0.0
+- fourmolu-0.6.0.0
 
 # shake-bench dependencies
 - Chart-1.9.3
@@ -80,15 +87,12 @@ extra-deps:
 - ghc-typelits-natnormalise-0.7.6
 
 # boot libraries
-- Cabal-3.4.1.0
+- Cabal-3.6.0.0
 - directory-1.3.6.2
 - process-1.6.13.2
 - time-1.9.3
 - unix-2.7.2.2
 - Win32-2.12.0.1
-
-# currently needed for ghcide>extra, etc.
-allow-newer: true
 
 ghc-options:
   "$everything": -haddock
@@ -104,15 +108,12 @@ configure-options:
 flags:
   haskell-language-server:
     pedantic: true
-
-    ignore-plugins-ghc-bounds: true
-    stylishHaskell: false
-
   retrie:
     BuildExecutable: false
   # Stack doesn't support automatic flags.
   hls-hlint-plugin:
     hlint33: true
+    ghc-lib: true
   hyphenation:
     embed: true
 
