Restore allow-newer

--- a/stack-9.0.2.yaml
+++ b/stack-9.0.2.yaml
@@ -97,6 +97,8 @@ extra-deps:
 ghc-options:
   "$everything": -haddock
 
+allow-newer: true
+
 configure-options:
   ghcide:
     - --disable-library-for-ghci
