--- a/stack-9.0.1.yaml
+++ b/stack-9.0.1.yaml
@@ -75,6 +75,8 @@ extra-deps:
 ghc-options:
   "$everything": -haddock
 
+allow-newer: true
+
 configure-options:
   ghcide:
     - --disable-library-for-ghci
