fix devShells and packages default

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ test/testdata/**/hie.yaml
 .shake/
 
 # pre-commit-hook.nix
-#.pre-commit-config.yaml
+.pre-commit-config.yaml
 
 # direnv
 /.direnv/
