--- a/cabal-ghc92.project
+++ b/cabal-ghc92.project
@@ -39,7 +39,7 @@ package *
 
 write-ghc-environment-files: never
 
-index-state: 2022-04-25T10:14:27Z
+index-state: 2022-04-27T09:22:49Z
 
 constraints:
   -- These plugins don't build/work on GHC92 yet
@@ -51,14 +51,10 @@ constraints:
     -splice
     -tactic,
   hls-hlint-plugin +ghc-lib,
+  -- # Use ghc-lib force instead of ghc itself
   ghc-lib-parser-ex -auto,
   hlint +ghc-lib,
   stylish-haskell +ghc-lib
-
-source-repository-package
-  type: git
-  location: https://github.com/July541/stylish-haskell.git
-  tag: 305168551e0fe808e0c6ba14d8245680cdd6649d
 
 allow-newer:
   -- for shake-bench
