clean up references to cabal-ghc92.project and other stale docs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,9 +18,9 @@ variables:
     - GHC_VERSION: 9.0.2
       CABAL_PROJECT: cabal.project
     - GHC_VERSION: 9.2.2
-      CABAL_PROJECT: cabal-ghc92.project
+      CABAL_PROJECT: cabal.project
     - GHC_VERSION: 9.2.1
-      CABAL_PROJECT: cabal-ghc92.project
+      CABAL_PROJECT: cabal.project
 
 workflow:
   rules:
