we should not store cabal freeze files in the CI cache

--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -121,6 +121,7 @@ runs:
 
     - name: Form the package list ('cabal.project.freeze')
       run: |
+        rm cabal.project.freeze || \
         cabal v2-freeze && \
         echo "" && \
         echo 'Output:' && \
