nix: build all binaries again

--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -113,10 +113,8 @@ jobs:
       run: cachix push haskell-language-server dev
     - name: Build binaries
       run: nix build --print-build-logs
-    # smunix: "Build all binaries" takes too long to run and doesn't contribute
-    # to caching to cachix for now; so I'm temporarily disabling it for now.
-    # - name: Build all binaries
-    #   run: nix build --print-build-logs .#all-haskell-language-server
+    - name: Build all binaries
+      run: nix build --print-build-logs .#all-haskell-language-server
     - name: Push binaries
       if: ${{ env.HAS_TOKEN == 'true' }}
       run: nix path-info --json | jq -r '.[].path' | cachix push haskell-language-server
