--- a/cabal.project
+++ b/cabal.project
@@ -29,6 +29,12 @@ packages:
          ./plugins/hls-selection-range-plugin
          ./plugins/hls-change-type-signature-plugin
          ./plugins/hls-gadt-plugin
+         ./plugins/hls-hident-plugin
+
+source-repository-package
+  type: git
+  location: https://github.com/uhbif19/hindent.git
+  tag: dda88a4ab9fefbd07ba2614c02fecf73b20fe9d5
 
 -- Standard location for temporary packages needed for particular environments
 -- For example it is used in the project gitlab mirror to help in the MAcOS M1 build script
