initial hls-gadt-plugin

--- a/cabal-ghc92.project
+++ b/cabal-ghc92.project
@@ -28,6 +28,7 @@ packages:
          ./plugins/hls-alternate-number-format-plugin
          ./plugins/hls-selection-range-plugin
          ./plugins/hls-change-type-signature-plugin
+         ./plugins/hls-gadt-plugin
 
 with-compiler: ghc-9.2.2
 
