--- a/stack.yaml
+++ b/stack.yaml
@@ -31,6 +31,7 @@ packages:
 - ./plugins/hls-alternate-number-format-plugin
 - ./plugins/hls-selection-range-plugin
 - ./plugins/hls-change-type-signature-plugin
+- ./plugins/hls-gadt-plugin
 
 extra-deps:
 - Chart-1.9.3@sha256:640a38463318b070d80a049577e4f0b3322df98290abb7afcf0cb74a4ad5b512,2948
@@ -71,7 +72,6 @@ flags:
     pedantic: true
 
     ignore-plugins-ghc-bounds: true
-    alternateNumberFormat: false
     brittany: false
     eval: false
     haddockComments: false
