--- a/plugins/hls-gadt-plugin/test/testdata/hie.yaml
+++ b/plugins/hls-gadt-plugin/test/testdata/hie.yaml
@@ -1,3 +1,3 @@
 cradle:
   direct:
-    arguments: ["-XHaskell2010", "-XExistentialQuantification"]
+    arguments: ["-XHaskell2010", "-XExistentialQuantification", "-XGADTs"]
